@@ -25,7 +25,7 @@
 
 #include <gnome.h>
 
-#include "gui/_dictlex.h"
+#include "gui/dictlex.h"
 #include "gui/cipher_key_dialog.h"
 #include "gui/shortcutbar_main.h"
 #include "gui/dictlex_dialog.h"
